fix: when the first table is  display on a small screan it is not aligne in the center.

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -115,7 +115,9 @@ li.menu {
     table.info {
         width: 90%;
     }
-
+table{
+    margin: auto;
+}
     th {
         width: 40%;
     }
